# spectroxide

./: .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  install.sh
.claude/skills/tikz-workflow/: skill.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
benches/: solver_benchmarks.rs
data/: FIRAS_COVARIANCE_MATRIX_HRES.FITS  FIRAS_COVARIANCE_MATRIX_LOWF.FITS  firas_correlation_matrix.txt  firas_monopole_spec_v1.txt
data/cosmotherm/: README.md  download_greens.sh
dev/: make_figures.py  verify_refs.html
dev/data/: cosmotherm_dp_lims.csv  pde_dm_results_cache.npz  pde_dm_results_nc_cache.npz  pde_gf_table_cache.npz  visibility_fit_results.json  visibility_scalar_ec_fit.json  visibility_scalar_fit.json  visibility_spectral_fit.json  visibility_spectral_fit_v2.json
dev/notebooks/: cosmology_background.ipynb  mu_y_vs_zh.ipynb  pde_greens_function.ipynb  pde_validation.ipynb  visibility_fit_data.json
dev/scripts/: benchmark_paper_table.py  build_gf_table.py  build_visibility_table.py  check_refs.py  convergence_figure.py  dm_cosmotherm_compare.py  fit_visibility_from_table.py  photon_energy_conservation.py  plot_visibility_comparison.py  remake_firas_photon_limits.py
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  requirements.txt  rust_api.rst
docs/_static/: custom.css
docs/api/: cosmology.rst  firas.rst  greens.rst  greens_table.rst  index.rst  solver.rst  style.rst
docs/tutorials/: 01_getting_started.nblink  02_energy_injection.nblink  03_new_physics.nblink  04_custom_scenarios.nblink  05_observational_constraints.nblink  06_greens_table.nblink  index.rst
examples/: custom_injection.rs  photon_diag.rs
notebooks/figures/: development_workflow.tex  dp_firas_results.npz  dp_firas_results_2sided.npz
notebooks/observational/: firas_photon_limits.ipynb
notebooks/paper_figures/: _generate_notebooks.py  convergence_study.ipynb  cosmotherm_comparison.ipynb  dark_photon_constraints.ipynb  dm_scenario_comparison.ipynb  energy_conservation.ipynb  firas_photon_limits.ipynb  mu_y_vs_injection_redshift.ipynb  pathological_heating.ipynb  photon_injection_spectra.ipynb  visibility_functions.ipynb
notebooks/physics/: adiabatic_cooling.ipynb  photon_injection.ipynb  photon_injection_validation.ipynb
notebooks/tutorials/: 01_getting_started.ipynb  02_energy_injection.ipynb  03_new_physics.ipynb  04_custom_scenarios.ipynb  05_observational_constraints.ipynb  06_greens_table.ipynb
python/: pyproject.toml
python/spectroxide/: __init__.py  _validation.py  cosmology.py  cosmotherm.py  dark_photon.py  firas.py  greens.py  greens_table.py  plot_params.py  solver.py  style.py
python/tests/: test_adversarial_inputs.py  test_cosmotherm.py  test_firas.py  test_greens.py  test_greens_table.py  test_solver.py
src/: bremsstrahlung.rs  cli.rs  constants.rs  cosmology.rs  dark_photon.rs  distortion.rs  double_compton.rs  electron_temp.rs  energy_injection.rs  greens.rs  grid.rs  kompaneets.rs  lib.rs  main.rs  output.rs  recombination.rs  solver.rs  spectrum.rs
tests/: adversarial_inputs.rs  cli_integration.rs  convergence_order.rs  cosmotherm_comparison.rs  coverage_gaps.rs  greens_function_checks.rs  heat_injection.rs  science_suite.rs
